[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/ui/merchant_bg.tres" type="Texture" id=1]
[ext_resource path="res://assets/ui/panel_metal_1.tres" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/fonts/font_shop_sign.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/panel_green.tres" type="Texture" id=6]
[ext_resource path="res://assets/ui/ui_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/panel_metal_3.tres" type="Texture" id=8]
[ext_resource path="res://scenes/UI/Shop/UIShop.gd" type="Script" id=9]
[ext_resource path="res://scenes/UI/Shop/Perk.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 7 )
region = Rect2( 160, 784, 20, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 7 )
region = Rect2( 180, 784, 19, 14 )

[sub_resource type="Theme" id=31]
Fonts/fonts/large = ExtResource( 3 )
Fonts/fonts/normal = ExtResource( 3 )
Label/fonts/font = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=30]
content_margin_left = 4.0
bg_color = Color( 0.117647, 0.168627, 0.188235, 1 )
border_width_left = 1
border_width_right = 1
border_color = Color( 0.0742188, 0.0716095, 0.0716095, 1 )
border_blend = true

[sub_resource type="StyleBoxEmpty" id=36]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=38]

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="AtlasTexture" id=19]

[sub_resource type="AtlasTexture" id=20]

[sub_resource type="AtlasTexture" id=21]

[sub_resource type="AtlasTexture" id=22]

[sub_resource type="AtlasTexture" id=23]

[sub_resource type="AtlasTexture" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="Theme" id=12]
default_font = ExtResource( 3 )
ItemList/colors/font_color = Color( 0.63, 0.63, 0.63, 1 )
ItemList/colors/font_color_selected = Color( 0.921569, 1, 0, 1 )
ItemList/constants/hseparation = 0
ItemList/constants/icon_margin = 0
ItemList/constants/line_separation = 0
ItemList/constants/vseparation = 0
ItemList/fonts/font = ExtResource( 3 )
ItemList/styles/bg = SubResource( 30 )
ItemList/styles/bg_focus = SubResource( 36 )
ItemList/styles/cursor = SubResource( 37 )
ItemList/styles/cursor_unfocused = SubResource( 38 )
ItemList/styles/selected = SubResource( 39 )
VScrollBar/icons/decrement = SubResource( 19 )
VScrollBar/icons/decrement_highlight = SubResource( 20 )
VScrollBar/icons/decrement_pressed = SubResource( 21 )
VScrollBar/icons/increment = SubResource( 22 )
VScrollBar/icons/increment_highlight = SubResource( 23 )
VScrollBar/icons/increment_pressed = SubResource( 24 )
VScrollBar/styles/grabber = SubResource( 25 )
VScrollBar/styles/grabber_highlight = SubResource( 26 )
VScrollBar/styles/grabber_pressed = SubResource( 27 )
VScrollBar/styles/scroll = SubResource( 28 )
VScrollBar/styles/scroll_focus = SubResource( 29 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.141176, 0.141176, 0.141176, 1 )
border_blend = true
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 180, 52 )

[sub_resource type="GDScript" id=2]
script/source = "extends Control

const QUOTES := [
	\"Zombies ate my neighbour!\",
	\"Alwats prepare for the worst\"
]

func _ready():
	randomize()
	QUOTES.shuffle()
	$LabelQuotes.text = QUOTES.front()
"

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform vec2 deformation = vec2(0, 0);
uniform float sideWaysDeformationFactor = 5.0;
uniform float knockbackFactor = 0.4;

void vertex() {
	vec2 deformationStrength = abs(deformation);
	float sideWaysDeformation = min(deformationStrength.x, deformationStrength.y);
	float spriteWidth = abs(VERTEX.x);
	if (sign(VERTEX.y) != sign(deformation.y)) {
		VERTEX.x += sideWaysDeformation * sideWaysDeformationFactor * spriteWidth * sign(deformation.x);
	}
	vec2 scale = 1.0 - deformationStrength;
	
	VERTEX.x *= scale.x / scale.y;
	VERTEX.y *= scale.y / scale.x;
	VERTEX.xy += deformation * spriteWidth * knockbackFactor;
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/deformation = Vector2( -0.15, -0.235 )
shader_param/sideWaysDeformationFactor = 0.25
shader_param/knockbackFactor = 0.5

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background/TextureEyes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "blink"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/TextureEyes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background/TextureMouth:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Background/TextureMouth:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "talk"
length = 0.33
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/TextureMouth:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.0901961, 0.290196, 0.156863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.137255, 0.372549, 0.129412, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.862745, 0.0588235, 0.0588235, 1 )

[sub_resource type="ImageTexture" id=42]

[sub_resource type="StyleBoxFlat" id=44]
bg_color = Color( 0.117647, 0.176471, 0.176471, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.2, 0.14902, 1 )
border_blend = true

[sub_resource type="Theme" id=40]
default_font = ExtResource( 3 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 45 )
Button/styles/hover = SubResource( 46 )
Button/styles/normal = null
Button/styles/pressed = null
Dialogs/constants/button_margin = 24
Dialogs/constants/margin = 4
TooltipPanel/styles/panel = SubResource( 41 )
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 18
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = SubResource( 42 )
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 44 )

[node name="UIShop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_top = 0.177778
anchor_right = 0.465625
anchor_bottom = 1.00556
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="TextureEyes" type="TextureRect" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 47.0
margin_top = 32.0
margin_right = -82.0
margin_bottom = -101.0
texture = SubResource( 3 )
stretch_mode = 3

[node name="TextureMouth" type="TextureRect" parent="Background"]
anchor_left = 0.322148
anchor_top = 0.315436
anchor_right = 0.449664
anchor_bottom = 0.409396
texture = SubResource( 6 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelRight" type="NinePatchRect" parent="."]
anchor_left = 0.465625
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 31 )
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="PanelRight"]
anchor_left = 0.0643275
anchor_top = 0.266667
anchor_right = 0.625731
anchor_bottom = 0.338889
margin_top = -3.8147e-06
text = "PERK SELECTION"
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PerksContainer" type="VBoxContainer" parent="PanelRight"]
anchor_left = 0.0409357
anchor_top = 0.35
anchor_right = 0.953216
anchor_bottom = 0.827778
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GridContainer" type="GridContainer" parent="PanelRight/PerksContainer"]
margin_right = 156.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Perk1" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 36.0
margin_bottom = 41.0
perk_name = "Pistol"
perk_price = 12738

[node name="Perk2" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 76.0
margin_bottom = 41.0

[node name="Perk3" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 116.0
margin_bottom = 41.0

[node name="Perk4" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_right = 156.0
margin_bottom = 41.0

[node name="Perk5" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 36.0
margin_bottom = 86.0

[node name="Perk6" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 45.0
margin_right = 76.0
margin_bottom = 86.0

[node name="Perk7" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 45.0
margin_right = 116.0
margin_bottom = 86.0

[node name="Perk8" parent="PanelRight/PerksContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 45.0
margin_right = 156.0
margin_bottom = 86.0

[node name="WeaponsContainer" type="VBoxContainer" parent="PanelRight"]
anchor_left = 0.0643275
anchor_top = 0.0444444
anchor_right = 0.619883
anchor_bottom = 0.205556
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="PanelRight/WeaponsContainer"]
margin_right = 95.0
margin_bottom = 13.0
text = "Weapon selection"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="PanelRight/WeaponsContainer"]
margin_top = 17.0
margin_right = 95.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="PanelRight/WeaponsContainer/MarginContainer"]
margin_right = 95.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 12 )
allow_reselect = true
same_column_width = true

[node name="PanelMargin" type="Panel" parent="PanelRight"]
anchor_left = 0.0643275
anchor_top = 0.133333
anchor_right = 0.619883
anchor_bottom = 0.205556
margin_top = -1.90735e-06
margin_right = 1.0
rect_min_size = Vector2( 96, 12 )
mouse_filter = 2
custom_styles/panel = SubResource( 32 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Cash" type="NinePatchRect" parent="."]
anchor_right = 0.46875
anchor_bottom = 0.177778
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="Cash"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelCash" type="Panel" parent="Cash/CenterContainer"]
margin_left = 15.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 28.0
rect_min_size = Vector2( 120, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Cash/CenterContainer/PanelCash"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelCash" type="Label" parent="Cash/CenterContainer/PanelCash/CenterContainer"]
margin_left = 6.0
margin_top = 5.0
margin_right = 114.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "LOOT CASH: $5000000"

[node name="PanelQuotes" type="Control" parent="."]
anchor_left = 0.025
anchor_top = 0.233333
anchor_right = 0.134375
anchor_bottom = 0.333333
margin_top = 0.999996
script = SubResource( 2 )

[node name="LabelQuotes" type="Label" parent="PanelQuotes"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
custom_fonts/font = ExtResource( 4 )
text = "this is a text deformation test"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayerEyes" type="AnimationPlayer" parent="."]
autoplay = "blink"
anims/RESET = SubResource( 4 )
anims/blink = SubResource( 5 )

[node name="AnimationPlayerMouth" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/talk = SubResource( 9 )

[node name="TweenItemListTransition" type="Tween" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CenterContainer"]
margin_left = 60.0
margin_top = 55.0
margin_right = 260.0
margin_bottom = 125.0
input_pass_on_modal_close_click = false
theme = SubResource( 40 )
popup_exclusive = true
window_title = ""
dialog_autowrap = true

[connection signal="gui_input" from="PanelRight/WeaponsContainer/MarginContainer/ItemList" to="." method="_on_ItemList_gui_input"]
[connection signal="item_selected" from="PanelRight/WeaponsContainer/MarginContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="confirmed" from="CenterContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="gui_input" from="CenterContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_gui_input"]
[connection signal="item_rect_changed" from="CenterContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_item_rect_changed"]
